edit currency pair limits - 1

--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -212,7 +212,7 @@ admin.usersWallet =代码对用户帐户
 admin.wallets = 帐户 
 orders.currencybuy = 购买
 dashboard.highestPrice = 最高报价
-order.minvalue =  0.000000001该值必须大于0.000000001 
+order.minvalue=该值必须大于{0}
 dashboard.support = 帮忙
 dashboard.depositAndWithdraw = 存款和撤回
 orderinfo.acceptdate = 认可
@@ -353,7 +353,7 @@ merchants.outputTitle = 提款
 admin.ref = 链接
 admin.listOfAdmins = 管理员列表
 login.notFound = 错误的密码或用户名！
-order.valuerange = 该值应在范围：0.000000001 - 10,000
+order.valuerange=该值应在范围：{0} - {1}
 wallets.amount = 支付的数量
 merchants.WithdrawRequestDecline = 申明推出了
 admin.listOfUsers = 会员列表
@@ -362,7 +362,7 @@ merchants.currencyforoutput = 货币总结
 orders.for = 为了
 merchants.promptWithdrawRequestDecline = 你确定你要拒绝的应用程序？
 dashboard.sell = 出销
-order.maxvalue = 该值必须小于10000
+order.maxvalue=该值必须小于{0}
 transaction.operationTypeCreateOrder = 创造单据
 dashboard.lowestPrice = 最低报价
 dashboard.entrance = 进口
@@ -1270,3 +1270,5 @@ admin.autoTrading.bot.notEnabled=Bot not enabled
 admin.autoTrading.bot.notFound=Bot with id (0) not found
 admin.autoTrading.considerRange=Consider orders for price range computation 
 admin.autoTrading.settings.considerRange=Consider user orders for price range
+admin.currencyLimits.maxAmount=Maximal amount
+admin.currencyLimits.minAmount=Minimal amount
