--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -355,9 +355,9 @@ merchants.currencyforoutput=Output currency
 dashboard.orderPrice=Price
 register.capchaincorrect=A problem occurred while checking the capcha. Try again, please
 order.fillfield=Complete the field
-order.minvalue=The value must be greater than 0.000000001
-order.maxvalue=The value must be less than 10 000
-order.valuerange=The value must be in the following range: 0.000000001 - 10 000
+order.minvalue=The value must be greater than {0}
+order.maxvalue=The value must be less than {0}
+order.valuerange=The value must be in the following range: {0} - {1}
 login.latinonly=The name must be Latin characters
 login.symbonly=Can contain the characters "-" and "_"
 login.notdigit=Must not start with a digit
@@ -1203,3 +1203,5 @@ admin.autoTrading.bot.notEnabled=Bot not enabled
 admin.autoTrading.bot.notFound=Bot with id (0) not found
 admin.autoTrading.considerRange=Consider orders for price range computation
 admin.autoTrading.settings.considerRange=Consider user orders for price range
+admin.currencyLimits.maxAmount=Maximal amount
+admin.currencyLimits.minAmount=Minimal amount
