--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -398,9 +398,9 @@ merchants.currencyforoutput = Mata uang untuk penarikan
 dashboard.orderPrice=Harga
 register.capchaincorrect=Terjadi kesalahan saat memeriksa captcha. Silahkan,ulangi lagi
 order.fillfield = Mengisi kolom
-order.minvalue=Nilai harus lebih besar dari 0.000000001
-order.maxvalue=Nilai harus kurang dari 10 000
-order.valuerange=Nilai harus dalam kisaran : 0.000000001 - 10 000
+order.minvalue=Nilai harus lebih besar dari {0}
+order.maxvalue=Nilai harus kurang dari {0}
+order.valuerange=Nilai harus dalam kisaran : {0} - {1}
 login.latinonly=Nama harus dalam huruf latin
 login.symbonly=Dapat berisi simbol "-" dan "_"
 login.notdigit= Tidak harus mulai dari angka
@@ -1312,3 +1312,5 @@ input.warning.Payeer=ATTENTION! Temporary technical problems with automatic refi
 Please contact our support after payment to pass costs to your account!
 admin.autoTrading.considerRange=Consider orders for price range computation 
 admin.autoTrading.settings.considerRange=Consider user orders for price range
+admin.currencyLimits.maxAmount=Maximal amount
+admin.currencyLimits.minAmount=Minimal amount
