fix bot settings

--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -1410,13 +1410,13 @@ admin.autoTrading.settings.roles=Role settings
 admin.autoTrading.settings.bot=General settings
 admin.autoTrading.role=Role
 admin.autoTrading.sameRoleOnly=Accept orders only from same role users
-admin.autoTrading.botAccept=Allow bot to accept orders
+admin.autoTrading.botAccept=Allow only bot to accept orders
 admin.autoTrading.bot.notCreated=Bot has not been created yet
 admin.autoTrading.bot.create=Create bot
 admin.autoTrading.bot.nickname=Nickname
 admin.autoTrading.bot.email=Email
 admin.autoTrading.bot.status=Enabled
-admin.autoTrading.bot.timeout=Timeout before accept, sec.
+admin.autoTrading.bot.timeout=Timeout before accept, ms
 input.warning.Payeer=ATTENTION! Temporary technical problems with automatic refill through Payeer.<br>\\\
 Please contact our support after payment to pass costs to your account!
 admin.autoTrading.settings.bot.launch=Launch settings
