--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -1248,7 +1248,7 @@ admin.autoTrading.bot.create=Create bot
 admin.autoTrading.bot.nickname=Nickname
 admin.autoTrading.bot.email=Email
 admin.autoTrading.bot.status=Enabled
-admin.autoTrading.bot.timeout=Timeout before accept, sec.
+admin.autoTrading.bot.timeout=Timeout before accept, ms
 dogeWallet.title=Dogecoin Wallet
 input.warning.Payeer=ATTENTION! Temporary technical problems with automatic refill through Payeer.<br>\\\
 Please contact our support after payment to pass costs to your account!
