--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -1293,7 +1293,7 @@ admin.autoTrading.bot.create=Create bot
 admin.autoTrading.bot.nickname=Nickname
 admin.autoTrading.bot.email=Email
 admin.autoTrading.bot.status=Enabled
-admin.autoTrading.bot.timeout=Timeout before accept, sec.
+admin.autoTrading.bot.timeout=Timeout before accept, ms
 dogeWallet.title=Dogecoin Wallet
 admin.autoTrading.settings.bot.launch=Launch settings
 admin.autoTrading.settings.bot.trading=Trading settings
