--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1176,7 +1176,7 @@ admin.autoTrading.bot.create=Create bot
 admin.autoTrading.bot.nickname=Nickname
 admin.autoTrading.bot.email=Email
 admin.autoTrading.bot.status=Enabled
-admin.autoTrading.bot.timeout=Timeout before accept, sec.
+admin.autoTrading.bot.timeout=Timeout before accept, ms
 orders.allRoles=All roles
 message.cp.USD=USD markets
 message.cp.BTC=BTC markets
