--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -1270,3 +1270,6 @@ admin.autoTrading.bot.notEnabled=Bot not enabled
 admin.autoTrading.bot.notFound=Bot with id (0) not found
 admin.autoTrading.considerRange=Consider orders for price range computation 
 admin.autoTrading.settings.considerRange=Consider user orders for price range
+message.cp.USD=USD markets
+message.cp.BTC=BTC markets
+message.cp.FIAT=Local markets
