--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -1438,3 +1438,4 @@ admin.autoTrading.considerRange=Consider orders for price range computation
 admin.autoTrading.settings.considerRange=Consider user orders for price range
 admin.currencyLimits.minAmount=Minimal amount
 admin.currencyLimits.maxAmount=Maximal amount
+admin.merchantsCommissions.subtractForWithdraw=Subtract merchant commission from sum for withdraw
