--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -1275,3 +1275,4 @@ message.cp.BTC=BTC markets
 message.cp.FIAT=Local markets
 admin.currencyLimits.maxAmount=Maximal amount
 admin.currencyLimits.minAmount=Minimal amount
+admin.merchantsCommissions.subtractForWithdraw=Subtract merchant commission from sum for withdraw
