add merchant commission to withdraw request

--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -1439,3 +1439,4 @@ admin.autoTrading.settings.considerRange=Consider user orders for price range
 admin.currencyLimits.minAmount=Minimal amount
 admin.currencyLimits.maxAmount=Maximal amount
 admin.merchantsCommissions.subtractForWithdraw=Subtract merchant commission from sum for withdraw
+withdrawal.amountToWithdraw=Amount for withdraw
