--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -1276,3 +1276,4 @@ message.cp.FIAT=Local markets
 admin.currencyLimits.maxAmount=Maximal amount
 admin.currencyLimits.minAmount=Minimal amount
 admin.merchantsCommissions.subtractForWithdraw=Subtract merchant commission from sum for withdraw
+withdrawal.amountToWithdraw=Amount for withdraw
