--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -1315,3 +1315,4 @@ admin.autoTrading.settings.considerRange=Consider user orders for price range
 admin.currencyLimits.maxAmount=Maximal amount
 admin.currencyLimits.minAmount=Minimal amount
 admin.merchantsCommissions.subtractForWithdraw=Subtract merchant commission from sum for withdraw
+withdrawal.amountToWithdraw=Amount for withdraw
