--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -1355,3 +1355,4 @@ admin.autoTrading.settings.considerRange=\u0423\u0447\u0438\u0442\u044B\u0432\u0
 admin.currencyLimits.maxAmount=\u041C\u0430\u043A\u0441\u0438\u043C\u0430\u043B\u044C\u043D\u043E\u0435 \u043A\u043E\u043B\u0438\u0447\u0435\u0441\u0442\u0432\u043E
 admin.currencyLimits.minAmount=\u041C\u0438\u043D\u0438\u043C\u0430\u043B\u044C\u043D\u043E\u0435 \u043A\u043E\u043B\u0438\u0447\u0435\u0441\u0442\u0432\u043E
 admin.merchantsCommissions.subtractForWithdraw=\u0412\u044B\u0447\u0438\u0442\u0430\u0442\u044C \u043A\u043E\u043C\u0438\u0441\u0441\u0438\u044E \u043C\u0435\u0440\u0447\u0430\u043D\u0442\u044B \u0438\u0437 \u0441\u0443\u043C\u043C\u044B \u043D\u0430 \u0432\u044B\u0432\u043E\u0434
+withdrawal.amountToWithdraw=\u0421\u0443\u043C\u043C\u0430 \u043A \u0432\u044B\u0432\u043E\u0434\u0443
