--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -328,7 +328,7 @@ admin.uploadFiles = 上传文件（图片仅供*.png和*.JPEG，不超过5 MB）
 merchants.promptWithdrawRequestAccept = 你确定你要接受这个价格？
 transaction.confirmations = 等待确认：{0}/{1}
 orderinfo.deleteerror = 错误订单取消
-withdrawal.amount = 总额
+withdrawal.amount=总额*
 emailsubmitregister.subject = 注册exrates.me确认
 admin.status = 状态
 wallets.abalance = 平衡
@@ -1276,4 +1276,9 @@ message.cp.FIAT=Local markets
 admin.currencyLimits.maxAmount=Maximal amount
 admin.currencyLimits.minAmount=Minimal amount
 admin.merchantsCommissions.subtractForWithdraw=Subtract merchant commission from sum for withdraw
-withdrawal.amountToWithdraw=Amount for withdraw
+withdrawal.amountToWithdraw=Amount for withdraw**
+transaction.merchantCommissionAmount=Merchant commission amount
+withdrawal.amountExplained=* Full amount of request minus exchange commission
+withdrawal.amountToWithdrawExplained=** Depending on the merchant can be 'net' amount (merchant commission is charged \
+additionally to transaction amount), or include merchant commission \
+(merchant commission is subtracted from transaction amount)
