--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -65,7 +65,7 @@ admin.successCommentDelete=Comment deleted successful
 admin.promptDeleteUserComment=Are you sure that you want to delete this comment?
 withdrawal.requestDatetime=Date of creation
 withdrawal.user=User
-withdrawal.amount=Amount
+withdrawal.amount=Amount*
 withdrawal.currency=Currency
 withdrawal.commission=Commission
 withdrawal.merchant=Merchant
@@ -1206,4 +1206,9 @@ admin.autoTrading.settings.considerRange=Consider user orders for price range
 admin.currencyLimits.maxAmount=Maximal amount
 admin.currencyLimits.minAmount=Minimal amount
 admin.merchantsCommissions.subtractForWithdraw=Subtract merchant commission from sum for withdraw
-withdrawal.amountToWithdraw=Amount for withdraw
+withdrawal.amountToWithdraw=Amount for withdraw**
+transaction.merchantCommissionAmount=Merchant commission amount
+withdrawal.amountExplained=* Full amount of request minus exchange commission
+withdrawal.amountToWithdrawExplained=** Depending on the merchant can be 'net' amount (merchant commission is charged \
+additionally to transaction amount), or include merchant commission \
+(merchant commission is subtracted from transaction amount)
