--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -59,7 +59,7 @@ withdrawal.requestDatetime=Waktu pembuatan
 #not translated
 withdrawal.user=Pengguna
 #not translated
-withdrawal.amount=Jumlah
+withdrawal.amount=Jumlah*
 #not translated
 withdrawal.currency=Mata uang
 #not translated
@@ -1315,4 +1315,9 @@ admin.autoTrading.settings.considerRange=Consider user orders for price range
 admin.currencyLimits.maxAmount=Maximal amount
 admin.currencyLimits.minAmount=Minimal amount
 admin.merchantsCommissions.subtractForWithdraw=Subtract merchant commission from sum for withdraw
-withdrawal.amountToWithdraw=Amount for withdraw
+withdrawal.amountToWithdraw=Amount for withdraw**
+transaction.merchantCommissionAmount=Merchant commission amount
+withdrawal.amountExplained=* Full amount of request minus exchange commission
+withdrawal.amountToWithdrawExplained=** Depending on the merchant can be 'net' amount (merchant commission is charged \
+additionally to transaction amount), or include merchant commission \
+(merchant commission is subtracted from transaction amount)
