--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -60,7 +60,7 @@ withdrawal.requestDatetime=\u062A\u0627\u0631\u064A\u062E \u0627\u0644\u0627\u06
 #not translated
 withdrawal.user=\u0627\u0644\u0645\u0633\u062A\u062E\u062F\u0645
 #not translated
-withdrawal.amount=\u0627\u0644\u0645\u062C\u0645\u0648\u0639
+withdrawal.amount=\u0627\u0644\u0645\u062C\u0645\u0648\u0639*
 #not translated
 withdrawal.currency=\u0627\u0644\u0639\u0645\u0644\u0629
 #not translated
@@ -1439,4 +1439,8 @@ admin.autoTrading.settings.considerRange=Consider user orders for price range
 admin.currencyLimits.minAmount=Minimal amount
 admin.currencyLimits.maxAmount=Maximal amount
 admin.merchantsCommissions.subtractForWithdraw=Subtract merchant commission from sum for withdraw
-withdrawal.amountToWithdraw=Amount for withdraw
+withdrawal.amountToWithdraw=Amount for withdraw**
+withdrawal.amountExplained=* Full amount of request minus exchange commission
+withdrawal.amountToWithdrawExplained=** Depending on the merchant can be 'net' amount (merchant commission is charged \
+additionally to transaction amount), or include merchant commission \
+(merchant commission is subtracted from transaction amount)
