--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -67,7 +67,7 @@ withdrawal.requestDatetime=Date of creation
 withdrawal.user=User
 withdrawal.amount=Amount*
 withdrawal.currency=Currency
-withdrawal.commission=Commission
+withdrawal.commission=Exchange commission
 withdrawal.merchant=Merchant
 withdrawal.wallet=User wallet
 withdrawal.acceptanceDatetime=Acceptance date
