--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -63,7 +63,7 @@ withdrawal.amount=\u0421\u0443\u043C\u043C\u0430*
 #not translated
 withdrawal.currency=\u0412\u0430\u043B\u044E\u0442\u0430
 #not translated
-withdrawal.commission=\u041A\u043E\u043C\u0438\u0441\u0441\u0438\u044F
+withdrawal.commission=\u041A\u043E\u043C\u0438\u0441\u0441\u0438\u044F \u0431\u0438\u0440\u0436\u0438
 #not translated
 withdrawal.merchant=\u041F\u043B\u0430\u0442\u0435\u0436\u043D\u0430\u044F \u0441\u0438\u0441\u0442\u0435\u043C\u0430
 #not translated
