add roles control for admin for transfers

--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -1312,3 +1312,4 @@ input.warning.Payeer=ATTENTION! Temporary technical problems with automatic refi
 Please contact our support after payment to pass costs to your account!
 admin.autoTrading.considerRange=Consider orders for price range computation 
 admin.autoTrading.settings.considerRange=Consider user orders for price range
+admin.userCurrencyPermissionsTransfer=For transfer operations
