--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -1436,3 +1436,4 @@ admin.autoTrading.bot.notEnabled=Bot not enabled
 admin.autoTrading.bot.notFound=Bot with id (0) not found
 admin.autoTrading.considerRange=Consider orders for price range computation 
 admin.autoTrading.settings.considerRange=Consider user orders for price range
+admin.userCurrencyPermissionsTransfer=For transfer operations
