--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -1446,3 +1446,4 @@ additionally to transaction amount), or include merchant commission \
 (merchant commission is subtracted from transaction amount)
 
 admin.userCurrencyPermissionsTransfer=For transfer operations
+transaction.merchantCommissionAmount=transaction.merchantCommissionAmount
