--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -1447,3 +1447,8 @@ additionally to transaction amount), or include merchant commission \
 
 admin.userCurrencyPermissionsTransfer=For transfer operations
 transaction.merchantCommissionAmount=Merchant commission amount
+contacts.arm.address=<p>GameCredits, Ltd.</p>\
+  <p>Avan, Kouchaki taghamas, Bld. 14, Of. 24 </p>\
+  <p>Yerevan, Armenia</p>
+contacts.arm.title=Armenian office
+contacts.arm.phone=+1
