--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -1283,3 +1283,8 @@ withdrawal.amountToWithdrawExplained=** Depending on the merchant can be 'net' a
 additionally to transaction amount), or include merchant commission \
 (merchant commission is subtracted from transaction amount)
 admin.userCurrencyPermissionsTransfer=For transfer operations
+contacts.arm.address=<p>GameCredits, Ltd.</p>\
+  <p>Avan, Kouchaki taghamas, Bld. 14, Of. 24 </p>\
+  <p>Yerevan, Armenia</p>
+contacts.arm.title=Armenian office
+contacts.arm.phone=+1
