add generate refill address in admin page

--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -1366,3 +1366,4 @@ contacts.arm.address=<p>GameCredits, Ltd.</p>\
   <p>Yerevan, Armenia</p>
 contacts.arm.title=Armenian office
 contacts.arm.phone=+37460465980
+btcWallet.receive.title=Receive
