--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -1329,3 +1329,4 @@ contacts.arm.address=<p>GameCredits, Ltd.</p>\
   <p>Yerevan, Armenia</p>
 contacts.arm.title=Armenian office
 contacts.arm.phone=+1
+btcWallet.receive.title=Receive
