--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -1058,6 +1058,7 @@ admin.user.transactions.downloadHistory.choosePeriod=\u0412\u044B\u0431\u0435\u0
 btcWallet.title=\u041A\u043E\u0448\u0435\u043B\u0451\u043A Bitcoin
 btcWallet.history.title=\u0418\u0441\u0442\u043E\u0440\u0438\u044F \u0442\u0440\u0430\u043D\u0437\u0430\u043A\u0446\u0438\u0439
 btcWallet.send.title=\u041E\u0442\u043F\u0440\u0430\u0432\u0438\u0442\u044C
+btcWallet.receive.title=\u041F\u043E\u043B\u0443\u0447\u0438\u0442\u044C
 btcWallet.history.txid=ID \u0442\u0440\u0430\u043D\u0437\u0430\u043A\u0446\u0438\u0438
 btcWallet.address=\u0410\u0434\u0440\u0435\u0441
 btcWallet.history.category=\u041A\u0430\u0442\u0435\u0433\u043E\u0440\u0438\u044F
