--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -1322,3 +1322,4 @@ withdrawal.amountToWithdrawExplained=** Depending on the merchant can be 'net' a
 additionally to transaction amount), or include merchant commission \
 (merchant commission is subtracted from transaction amount)
 admin.userCurrencyPermissionsTransfer=For transfer operations
+message.subj.login.pin=Pin code for login Exrates
