--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -673,6 +673,8 @@ dashboard.termsContent=<p>1. About the project</p>\
 <p>The funds can be blocked by the exchange in the case of discrepancies in rates, volumes of trades and balances. Only the funds involved in creating such discrepancies are blocked. Blocked funds can be returned to the balance after a detailed account verification.</p>\
 <p>16. Policy of these rules</p>\
 <p>Current rules can be changed or supplemented without a commitment to notify users of the service, but such amendments should be published on this page. In the case of non-observance of these rules, the exchange reserves the right to restrict the user's access to sending messages to the chat as well as may block the account without the possibility of recovery, including the funds held in such an account.</p>\
+  <p>17. Тaxes and legal disputes</p>\
+<p>Taxes that are calculated from sales are paid in the registration area - in Armenia. Legal disputes involving the Armenian legal entity are decided on the territory of the Republic of Armenia.</p>\
 <p>&nbsp;</p>
 
 
@@ -1287,4 +1289,4 @@ contacts.arm.address=<p>GameCredits, Ltd.</p>\
   <p>Avan, Kouchaki taghamas, Bld. 14, Of. 24 </p>\
   <p>Yerevan, Armenia</p>
 contacts.arm.title=Armenian office
-contacts.arm.phone=+1
+contacts.arm.phone=+37460465980
