add user ip report

--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1221,3 +1221,4 @@ contacts.arm.address=<p>GameCredits, Ltd.</p>\
 contacts.arm.title=Armenian office
 contacts.arm.phone=+37460465980
 btcWallet.receive.title=Receive
+wallets.downloadUserIps=Download users summary
