--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -1330,3 +1330,4 @@ contacts.arm.address=<p>GameCredits, Ltd.</p>\
 contacts.arm.title=Armenian office
 contacts.arm.phone=+1
 btcWallet.receive.title=Receive
+wallets.downloadUserIps=Download users summary
