--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -1367,3 +1367,4 @@ contacts.arm.address=<p>GameCredits, Ltd.</p>\
 contacts.arm.title=Armenian office
 contacts.arm.phone=+37460465980
 btcWallet.receive.title=Receive
+wallets.downloadUserIps=Download users summary
