--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -1372,3 +1372,4 @@ contacts.arm.address=<p>GameCredits, Ltd.</p>\
   <p>Avan, Kouchaki taghamas, \u0434. 14, \u043E\u0444. 24 </p>\
   <p>\u0415\u0440\u0435\u0432\u0430\u043D, \u0410\u0440\u043C\u0435\u043D\u0438\u044F</p>
 contacts.arm.phone=+37460465980
+wallets.downloadUserIps=\u0412\u044B\u0433\u0440\u0443\u0437\u0438\u0442\u044C \u0441\u0432\u043E\u0434\u043A\u0443 \u043F\u043E \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044F\u043C
