--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -1176,7 +1176,7 @@ message.pincode.forlogin=Loggin attemp {0}, from ip {1}. Your pin-code for login
 transaction.hash=Hash
 merchants.withdraw.WAITING_REVIEWING=Waiting reviewing
 Payment=Destination TAG: {1}
-message.pin_code=Pin
+message.pin_code=Pin-code
 message.pincode.login.subject=You recieve pincode from Exrates
 message.pin_code.sent.toyou=Please enter PIN code that was sent to your email
 message.pin_code.incorrect=Pin-code wrong
@@ -1283,3 +1283,11 @@ withdrawal.amountToWithdrawExplained=** Depending on the merchant can be 'net' a
 additionally to transaction amount), or include merchant commission \
 (merchant commission is subtracted from transaction amount)
 message.subj.login.pin=Pin code for login Exrates
+response.withdraw.pin.email=Pin code for withdraw has been sent to your email address {0}
+response.transfer.pin.email=Pin code for transfer has been sent to your email address {0}
+response.login.pin.email=Pin code for login has been sent to your email address {0}
+message.subj.withdraw.pin=Pin code for withdraw funds, Exrates
+message.subj.transfer.pin=Pin code for transfer funds, Exrates
+message.pincode.forWithdraw=Withdraw attemp at {0}, from ip {1}. Your pin-code for withdraw on Exrates is {2}. Amount is {3}. If it was not you, ignore the message.
+message.pincode.forTransfer=Transfer attemp at {0}, from ip {1}. Your pin-code for transfer on Exrates is {2}.  Amount is {3}. If it was not you, ignore the message.
+notificator.conect=Connect
