--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1110,7 +1110,7 @@ btcWallet.noAddress=Address not found in the database
 transaction.hash=Hash
 message.pincode.forlogin=Loggin attemp {0}, from ip {1}. Your pin-code for login to Exrates is {2}. If it was not you, ignore the message.
 message.pincode.login.subject=You recieve pincode from Exrates
-message.pin_code=Pin
+message.pin_code=Pin-code
 message.pin_code.sent.toyou=Please enter PIN code that was sent to your email
 message.pin_code.incorrect=Pin-code wrong
 message.error_saving_settings=Error saving settings
@@ -1214,3 +1214,11 @@ additionally to transaction amount), or include merchant commission \
 (merchant commission is subtracted from transaction amount)
 admin.userCurrencyPermissionsTransfer=For transfer operations
 message.subj.login.pin=Pin code for login Exrates
+response.login.pin.email=Pin code for login has been sent to your email address {0}
+response.withdraw.pin.email=Pin code for withdraw has been sent to your email address {0}
+response.transfer.pin.email=Pin code for transfer has been sent to your email address {0}
+message.subj.withdraw.pin=Pin code for withdraw funds, Exrates
+message.subj.transfer.pin=Pin code for transfer funds, Exrates
+message.pincode.forWithdraw=Withdraw attemp at {0}, from ip {1}. Your pin-code for withdraw on Exrates is {2}. Amount is {3}. If it was not you, ignore the message.
+message.pincode.forTransfer=Transfer attemp at {0}, from ip {1}. Your pin-code for transfer on Exrates is {2}.  Amount is {3}. If it was not you, ignore the message.
+notificator.conect=Connect
