--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -1331,3 +1331,4 @@ message.subj.transfer.pin=Pin code for transfer funds, Exrates
 message.pincode.forWithdraw=Withdraw attemp at {0}, from ip {1}. Your pin-code for withdraw on Exrates is {2}. Amount is {3}. If it was not you, ignore the message.
 message.pincode.forTransfer=Transfer attemp at {0}, from ip {1}. Your pin-code for transfer on Exrates is {2}.  Amount is {3}. If it was not you, ignore the message.
 notificator.conect=Connect
+notificator.reconnect=Reconnect
