--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -1456,3 +1456,40 @@ message.pincode.forWithdraw=Withdraw attemp at {0}, from ip {1}. Your pin-code f
 message.pincode.forTransfer=Transfer attemp at {0}, from ip {1}. Your pin-code for transfer on Exrates is {2}.  Amount is {3}. If it was not you, ignore the message.
 notificator.conect=Connect
 notificator.reconnect=Reconnect
+message.telegram.connectInstr=To subscribe to alerts via Telegram, send the code below to the bot 'exrates_me_bot' t.me/exrates_me_bot
+message.telegram.subscriptionPrice=Suscription price
+message.telegram.messagePrice=Message price
+telegram.payAndGetTheSubscriptionCode=Pay and get code
+message.info=Info
+response.transfer.pin.sms=Pin code for transfer has been sent to your phone {0}
+response.withdraw.pin.sms=Pin code for withdraw has been sent to your phone {0}
+response.withdraw.pin.telegram=Pin code for withdraw has been sent to your Telegram
+response.transfer.pin.telegram=Pin code for transfer has been sent to your Telegram
+response.login.pin.sms=Pin code for login has been sent to your phone{0}
+response.login.pin.telegram=Pin code for login has been sent to your Telegram
+message.telegram.reconnectInstr=To connect another account send code to the telegram bot 'exrates_me_bot' \
+  https://t.me/exrates_me_bot
+message.sms.forOneMessage=for one message
+message.sms.forOneNumberCheck=for one number check
+message.sms.connect=Pay and connect
+message.sms.phoneNumber=Phone number
+message.sms.connectInstr=Enter your phone number(only digits) in international format
+message.sms.incorrect_number=Incorrect number
+message.sms.operator=Operator
+message.sms.country=Country
+message.sms.ConnectYourPhone=Connect your phone to receive sms
+message.sms.NumberSuccessConnected=Number successfuly coneected
+message.sms.ConnectedNumber=Connected number
+message.sms.codeForSubscribe=Exrates. Phone connect code: {0}
+message.sms.EnterCodeFromSms=Enter code from sms
+message.sms.code=Code
+message.sms.numberCheck=Check number
+message.sms.enterCode=Enter code
+message.sms.afterCheckInstruction=To connect this number click 'Connect' button, sms with registration code will be sent to you, sms cost for your number shown above
+admin.notificatorsMessagesSettings=Notifications messages settings
+admin.enabled=Enabled
+admin.subscribePrice=Subscribe price
+admin.messagePrice=Message price
+admin.notificatorName=Notificator
+admin.smsAbout=For sending sms uses https://www.epochta.com.ua service. Sms price depends on destination number operator. In the table below you can set price which takes above price of sms send. 
+admin.telegramAbout=In case of telegram user pays only for first subscribe, all messages are free
