--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1261,3 +1261,6 @@ admin.messagePrice=Message price
 admin.notificatorName=Notificator
 admin.smsAbout=For sending sms uses https://www.epochta.com.ua service. Sms price depends on destination number operator. In the table below you can set price which takes above price of sms send. 
 admin.telegramAbout=In case of telegram user pays only for first subscribe, all messages are free
+notificator.price.value=Price, USD
+admin.editPrice=Edit price
+admin.2falogin.allSite=Enable strict 2fa login for all users
