--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -1341,7 +1341,8 @@ message.pincode.forWithdraw=Withdraw attemp at {0}, from ip {1}. Your pin-code f
 message.pincode.forTransfer=Transfer attemp at {0}, from ip {1}. Your pin-code for transfer on Exrates is {2}.  Amount is {3}. If it was not you, ignore the message.
 notificator.conect=Connect
 notificator.reconnect=Reconnect
-message.telegram.connectInstr=To subscribe to alerts via Telegram, send the code below to the bot 'exrates_me_bot' t.me/exrates_me_bot
+message.telegram.connectInstr=To subscribe to alerts via Telegram, send the code below to the bot 'exrates_me_bot' t.me/exrates_me_bot.\
+Subscription fee, the cost is indicated above
 message.telegram.subscriptionPrice=Suscription price
 message.telegram.messagePrice=Message price
 telegram.payAndGetTheSubscriptionCode=Pay and get code
@@ -1354,11 +1355,11 @@ response.login.pin.sms=Pin code for login has been sent to your phone{0}
 response.login.pin.telegram=Pin code for login has been sent to your Telegram
 message.telegram.reconnectInstr=To connect another account send code to the telegram bot 'exrates_me_bot' \
   https://t.me/exrates_me_bot
-message.sms.forOneMessage=for one message
+message.sms.forOneMessage=Price for one message
 message.sms.forOneNumberCheck=for one number check
 message.sms.connect=Pay and connect
 message.sms.phoneNumber=Phone number
-message.sms.connectInstr=Enter your phone number(only digits) in international format
+message.sms.connectInstr=Enter your phone number(only digits) in international format and click 'check number' button
 message.sms.incorrect_number=Incorrect number
 message.sms.operator=Operator
 message.sms.country=Country
@@ -1370,14 +1371,14 @@ message.sms.EnterCodeFromSms=Enter code from sms
 message.sms.code=Code
 message.sms.numberCheck=Check number
 message.sms.enterCode=Enter code
-message.sms.afterCheckInstruction=To connect this number click 'Connect' button, sms with registration code will be sent to you, sms cost for your number shown above
+message.sms.afterCheckInstruction=To attach this number, click the 'Connect' button, the sms with the registration code will be sent to you, each sms paid, the cost of one message for your phone number is indicated above.
 admin.notificatorsMessagesSettings=Notifications messages settings
 admin.enabled=Enabled
 admin.subscribePrice=Subscribe price
 admin.messagePrice=Message price
 admin.notificatorName=Notificator
-admin.smsAbout=For sending sms uses https://www.epochta.com.ua service. Sms price depends on destination number operator. In the table below you can set price which takes above price of sms send. 
+admin.smsAbout=To send sms, uses the service https://www.epochta.com.ua. The cost of sms depends on the operator of the recipient. In the table below you set the price that will be charged on top of the SMS delivery cost.
 admin.telegramAbout=In case of telegram user pays only for first subscribe, all messages are free
 notificator.price.value=Price, USD
 admin.editPrice=Edit price
-admin.2falogin.allSite=Enable 2fa login on the site
+admin.2falogin.allSite=Enable strict 2fa login for all users
