--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -1389,37 +1389,38 @@ message.pincode.forWithdraw=\u041F\u043E\u043F\u044B\u0442\u043A\u0430 \u0432\u0
 message.pincode.forTransfer=\u041F\u043E\u043F\u044B\u0442\u043A\u0430 \u043F\u0435\u0440\u0435\u0432\u043E\u0434\u0430 \u0441\u0440\u0435\u0434\u0441\u0442\u0432 {0}, \u0441 ip {1}. \u0412\u0430\u0448 \u043F\u0438\u043D \u043A\u043E\u0434 \u0434\u043B\u044F \u043F\u0435\u0440\u0435\u0432\u043E\u0434\u0430 \u043D\u0430 Exrates {2}. \u0421\u0443\u043C\u043C\u0430 {3}. \u0415\u0441\u043B\u0438 \u044D\u0442\u043E \u0431\u044B\u043B\u0438 \u043D\u0435 \u0432\u044B - \u043F\u0440\u043E\u0438\u0433\u043D\u043E\u0440\u0438\u0440\u0443\u0439\u0442\u0435 \u043F\u0438\u0441\u044C\u043C\u043E.
 notificator.conect=Connect
 notificator.reconnect=Reconnect
-message.telegram.connectInstr=\u0414\u043B\u044F \u043F\u043E\u0434\u043F\u0438\u0441\u043A\u0438 \u043D\u0430 \u043E\u043F\u043E\u0432\u0435\u0449\u0435\u043D\u0438\u044F \u0447\u0435\u0440\u0435\u0437 \u0422\u0435\u043B\u0435\u0433\u0440\u0430\u043C \u043D\u0430\u0436\u043C\u0438\u0442\u0435 \u043A\u043D\u043E\u043F\u043A\u0443 '\u043E\u043F\u043B\u0430\u0442\u0438\u0442\u044C \u0438 \u043F\u043E\u043B\u0443\u0447\u0438\u0442\u044C \u043A\u043E\u0434', \u043F\u043E\u043B\u0443\u0447\u0435\u043D\u043D\u0456\u0439 \u043A\u043E\u0434 \u043E\u0442\u043F\u0440\u0430\u0432\u044C\u0442\u0435 \u0431\u043E\u0442\u0443 'exrates_me_bot' http://t.me/exrates_me_bot
+message.telegram.connectInstr=\u0414\u043B\u044F \u043F\u043E\u0434\u043F\u0438\u0441\u043A\u0438 \u043D\u0430 \u043E\u043F\u043E\u0432\u0435\u0449\u0435\u043D\u0438\u044F \u0447\u0435\u0440\u0435\u0437 \u0422\u0435\u043B\u0435\u0433\u0440\u0430\u043C \u043D\u0430\u0436\u043C\u0438\u0442\u0435 \u043A\u043D\u043E\u043F\u043A\u0443 '\u041E\u043F\u043B\u0430\u0442\u0438\u0442\u044C \u0438 \u043F\u043E\u043B\u0443\u0447\u0438\u0442\u044C \u043A\u043E\u0434', \u043F\u043E\u043B\u0443\u0447\u0435\u043D\u043D\u044B\u0439 \u043A\u043E\u0434 \u043E\u0442\u043F\u0440\u0430\u0432\u044C\u0442\u0435 \u0431\u043E\u0442\u0443 'exrates_me_bot' http://t.me/exrates_me_bot. \
+\u0421 \u0432\u0430\u0441 \u0435\u0434\u0438\u043D\u043E\u0440\u0430\u0437\u043E\u0432\u043E \u0441\u043D\u0438\u043C\u0435\u0442\u0441\u044F \u0441\u0443\u043C\u043C\u0430 \u0443\u043A\u0430\u0437\u0430\u043D\u043D\u0430\u044F \u0432\u044B\u0448\u0435.
 message.telegram.subscriptionPrice=\u0426\u0435\u043D\u0430 \u043F\u043E\u0434\u043F\u0438\u0441\u043A\u0438
 message.telegram.messagePrice=\u0426\u0435\u043D\u0430 \u0441\u043E\u043E\u0431\u0449\u0435\u043D\u0438\u044F
 telegram.payAndGetTheSubscriptionCode=\u041E\u043F\u043B\u0430\u0442\u0438\u0442\u044C \u0438 \u043F\u043E\u043B\u0443\u0447\u0438\u0442\u044C \u043A\u043E\u0434
 message.info=Info
-message.telegram.reconnectInstr=\u0427\u0442\u043E\u0431\u0456 \u043F\u043E\u0434\u043A\u043B\u044E\u0447\u0438\u0442\u044C \u0434\u0440\u0443\u0433\u043E\u0439 \u043F\u0440\u043E\u0444\u0438\u043B\u044C \u043E\u0442\u043F\u0440\u0430\u0432\u044C\u0442\u0435 \u043A\u043E\u0434 \u0442\u0435\u043B\u0435\u0435\u0433\u0440\u0430\u043C-\u0431\u043E\u0442\u0443 'exrates_me_bot' \
+message.telegram.reconnectInstr=\u0427\u0442\u043E\u0431\u044B \u043F\u043E\u0434\u043A\u043B\u044E\u0447\u0438\u0442\u044C \u0434\u0440\u0443\u0433\u043E\u0439 \u043F\u0440\u043E\u0444\u0438\u043B\u044C \u043E\u0442\u043F\u0440\u0430\u0432\u044C\u0442\u0435 \u043A\u043E\u0434 \u0442\u0435\u043B\u0435\u0435\u0433\u0440\u0430\u043C-\u0431\u043E\u0442\u0443 'exrates_me_bot' \
   https://t.me/exrates_me_bot
-message.sms.forOneMessage=for one message
-message.sms.forOneNumberCheck=for one number check
+message.sms.forOneMessage=\u0426\u0435\u043D\u0430 \u0437\u0430 \u043E\u0434\u043D\u043E \u0441\u043E\u043E\u0431\u0449\u0435\u043D\u0438\u0435
+message.sms.forOneNumberCheck=\u0417\u0430 \u043F\u0440\u043E\u0432\u0435\u0440\u043A\u0443 \u043E\u0434\u043D\u043E\u0433\u043E \u043D\u043E\u043C\u0435\u0440\u0430
 message.sms.connect=\u041E\u043F\u043B\u0430\u0442\u0438\u0442\u044C \u0438 \u043F\u043E\u0434\u043A\u043B\u044E\u0447\u0438\u0442\u044C
-message.sms.phoneNumber=Phone number
-message.sms.connectInstr=\u0412\u0432\u0435\u0434\u0438\u0442\u0435 \u0432\u0430\u0448 \u043D\u043E\u043C\u0435\u0440 \u0442\u0435\u043B\u0435\u0444\u043E\u043D\u0430(\u0442\u043E\u043B\u044C\u043A\u043E \u0446\u0438\u0444\u0440\u044B) \u0432 \u043C\u0435\u0436\u0434\u0443\u043D\u0430\u0440\u043E\u0434\u043D\u043E\u043C \u0444\u043E\u0440\u043C\u0430\u0442\u0435
-message.sms.incorrect_number=Incorrect number
-message.sms.operator=Operator
-message.sms.country=Country
-message.sms.ConnectYourPhone=Connect your phone to receive sms
-message.sms.NumberSuccessConnected=Number successfuly coneected
-message.sms.ConnectedNumber=Connected number
-message.sms.codeForSubscribe=Exrates. Phone connect code: {0}
-message.sms.EnterCodeFromSms=Enter code from sms
-message.sms.code=Code
-message.sms.numberCheck=Check number
-message.sms.enterCode=Enter code
-message.sms.afterCheckInstruction=To connect this number click 'Connect' button, sms with registration code will be sent to you, sms cost for your number shown above
-admin.notificatorsMessagesSettings=Notifications messages settings
-admin.enabled=Enabled
-admin.subscribePrice=Subscribe price
-admin.messagePrice=Message price
-admin.notificatorName=Notificator
-admin.smsAbout=For sending sms uses https://www.epochta.com.ua service. Sms price depends on destination number operator. In the table below you can set price which takes above price of sms send. 
-admin.telegramAbout=In case of telegram user pays only for first subscribe, all messages are free
-notificator.price.value=Price, USD
-admin.editPrice=Edit price
-admin.2falogin.allSite=Enable 2fa login on the site
+message.sms.phoneNumber=\u041D\u043E\u043C\u0435\u0440 \u0442\u0435\u043B\u0435\u0444\u043E\u043D\u0430
+message.sms.connectInstr=\u0412\u0432\u0435\u0434\u0438\u0442\u0435 \u0432\u0430\u0448 \u043D\u043E\u043C\u0435\u0440 \u0442\u0435\u043B\u0435\u0444\u043E\u043D\u0430(\u0442\u043E\u043B\u044C\u043A\u043E \u0446\u0438\u0444\u0440\u044B) \u0432 \u043C\u0435\u0436\u0434\u0443\u043D\u0430\u0440\u043E\u0434\u043D\u043E\u043C \u0444\u043E\u0440\u043C\u0430\u0442\u0435 \u0438 \u043D\u0430\u0436\u043C\u0438\u0442\u0435 \u043A\u043D\u043E\u043F\u043A\u0443 '\u041F\u0440\u043E\u0432\u0435\u0440\u0438\u0442\u044C \u043D\u043E\u043C\u0435\u0440'
+message.sms.incorrect_number=\u041D\u0435 \u043A\u043E\u0440\u0440\u0435\u043A\u0442\u043D\u044B\u0439 \u043D\u043E\u043C\u0435\u0440
+message.sms.operator=\u041E\u043F\u0435\u0440\u0430\u0442\u043E\u0440
+message.sms.country=\u0421\u0442\u0440\u0430\u043D\u0430
+message.sms.ConnectYourPhone=\u041F\u0440\u0438\u0441\u043E\u0435\u0434\u0435\u043D\u0438\u0442\u0435 \u0432\u0430\u0448 \u043D\u043E\u043C\u0435\u0440 \u0447\u0442\u043E\u0431\u044B \u043F\u043E\u043B\u0443\u0447\u0430\u0442\u044C sms
+message.sms.NumberSuccessConnected=\u041D\u043E\u043C\u0435\u0440 \u0443\u0441\u043F\u0435\u0448\u043D\u043E \u043F\u0440\u0438\u0441\u043E\u0435\u0434\u0438\u043D\u0435\u043D
+message.sms.ConnectedNumber=\u041F\u0440\u0438\u0432\u044F\u0437\u0430\u043D\u043D\u044B\u0439 \u043D\u043E\u043C\u0435\u0440 \u0442\u0435\u043B\u0435\u0444\u043E\u043D\u0430
+message.sms.codeForSubscribe=Exrates. \u041A\u043E\u0434 \u0434\u043B\u044F \u043F\u0440\u0438\u0432\u044F\u0437\u043A\u0438 \u0442\u0435\u043B\u0435\u0444\u043E\u043D\u0430: {0}
+message.sms.EnterCodeFromSms=\u0412\u0432\u0435\u0434\u0438\u0442\u0435 \u043A\u043E\u0434 \u0438\u0437 sms
+message.sms.code=\u041A\u043E\u0434
+message.sms.numberCheck=\u041F\u0440\u043E\u0432\u0435\u0440\u043A\u0430 \u043D\u043E\u043C\u0435\u0440\u0430
+message.sms.enterCode=\u0412\u0432\u0435\u0434\u0438\u0442\u0435 \u043A\u043E\u0434
+message.sms.afterCheckInstruction=\u0427\u0442\u043E\u0431\u044B \u043F\u0440\u0438\u0441\u043E\u0435\u0434\u0438\u043D\u0438\u0442\u044C \u044D\u0442\u043E\u0442 \u043D\u043E\u043C\u0435\u0440 \u043D\u0430\u0436\u043C\u0438\u0442\u0435 \u043A\u043D\u043E\u043F\u043A\u0443 '\u041F\u0440\u0438\u0441\u043E\u0435\u0434\u0438\u043D\u0438\u0442\u044C', sms \u0441 \u0440\u0433\u0438\u0441\u0442\u0440\u0430\u0446\u0438\u043E\u043D\u043D\u044B\u043C \u043A\u043E\u0434\u043E\u043C \u0431\u0443\u0434\u0435\u0442 \u043E\u0442\u043F\u0440\u0430\u0432\u043B\u0435\u043D\u043E \u0432\u0430\u043C, \u043A\u0430\u0436\u0434\u043E\u0435 sms \u043F\u043B\u0430\u0442\u043D\u043E\u0435, \u0441\u0442\u043E\u0438\u043C\u043E\u0441\u0442\u044C \u043E\u0434\u043D\u043E\u0433\u043E \u0441\u043E\u043E\u0431\u0449\u0435\u043D\u0438\u044F \u0434\u043B\u044F \u0432\u0430\u0448\u0435\u0433\u043E \u043D\u043E\u043C\u0435\u0440\u0430 \u0442\u0435\u043B\u0435\u0444\u043E\u043D\u0430 \u0443\u043A\u0430\u0437\u0430\u043D\u0430 \u0432\u044B\u0448\u0435.
+admin.notificatorsMessagesSettings=\u041D\u0430\u0441\u0442\u0440\u043E\u0439\u043A\u0438 \u043D\u043E\u0442\u0438\u0444\u0438\u043A\u0430\u0442\u043E\u0440\u0430
+admin.enabled=\u0412\u043A\u043B\u044E\u0447\u0435\u043D\u043E
+admin.subscribePrice=\u0421\u0442\u043E\u0438\u043C\u043E\u0441\u0442\u044C \u043F\u043E\u0434\u043F\u0438\u0441\u043A\u0438
+admin.messagePrice=\u0421\u0442\u043E\u0438\u043C\u043E\u0441\u0442\u044C \u0441\u043E\u043E\u0431\u0449\u0435\u043D\u0438\u044F
+admin.notificatorName=\u041D\u043E\u0442\u0438\u0444\u0438\u043A\u0430\u0442\u043E\u0440
+admin.smsAbout=\u0414\u043B\u044F \u043E\u0442\u043F\u0440\u0430\u0432\u043A\u0438 sms \u0438\u0441\u043F\u043E\u043B\u044C\u0437\u0443\u0435\u0442\u0441\u044F \u0441\u0435\u0440\u0432\u0438\u0441 https://www.epochta.com.ua . \u0421\u0442\u043E\u0438\u043C\u043E\u0441\u0442\u044C sms \u0437\u0430\u0432\u0438\u0441\u0438\u0442 \u043E\u0442 \u043E\u043F\u0435\u0440\u0430\u0442\u043E\u0440\u0430 \u043F\u043E\u043B\u0443\u0447\u0430\u0442\u0435\u043B\u044F. \u0412 \u0442\u0430\u0431\u043B\u0438\u0446\u0435 \u043D\u0438\u0436\u0435 \u0432\u044B \u0443\u0441\u0442\u0430\u043D\u0430\u0432\u043B\u0438\u0432\u0430\u0435\u0442\u0435 \u0446\u0435\u043D\u0443 \u043A\u043E\u0442\u043E\u0440\u0430\u044F \u0431\u0443\u0434\u0435\u0442 \u0432\u0437\u0438\u043C\u0430\u0442\u044C\u0441\u044F \u0441\u0432\u0435\u0440\u0445\u0443 \u0441\u0442\u043E\u0438\u043C\u043E\u0441\u0442\u0438 \u0434\u043E\u0441\u0442\u0430\u0432\u043A\u0438 \u0441\u043C\u0441. 
+admin.telegramAbout=\u0412 \u0441\u043B\u0443\u0447\u0430\u0435 \u043C\u0435\u0441\u0441\u0435\u043D\u0434\u0436\u0435\u0440\u0430 \u0422\u0435\u043B\u0435\u0433\u0440\u0430\u043C \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044C \u043F\u043B\u0430\u0442\u0438\u0442 \u0442\u043E\u043B\u044C\u043A\u043E \u0437\u0430 \u043F\u0435\u0440\u0432\u0443\u044E \u043F\u043E\u0434\u043F\u0438\u0441\u043A\u0443, \u0432\u0441\u0435 \u0441\u043E\u043E\u0431\u0449\u0435\u043D\u0438\u044F \u0431\u0435\u0441\u043F\u043B\u0430\u0442\u043D\u044B
+notificator.price.value=\u0426\u0435\u043D\u0430, USD
+admin.editPrice=\u0418\u0437\u043C\u0435\u043D\u0438\u0442\u044C \u0446\u0435\u043D\u0443
+admin.2falogin.allSite=\u0412\u043A\u043B\u044E\u0447\u0438\u0442\u044C \u043E\u0431\u044F\u0437\u0430\u0442\u0435\u043B\u044C\u043D\u043E\u0435 2fa \u043F\u0440\u0438 \u0432\u0445\u043E\u0434\u0435 \u0434\u043B\u044F \u0432\u0441\u0435\u0445 \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u0435\u0439
