--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1232,9 +1232,8 @@ message.pincode.forWithdraw=Exrates. Pin for withdraw {0}. Amount{1}
 message.pincode.forTransfer=Exrates. Pin for transfer {0}. Amount{1}
 notificator.conect=Connect
 notificator.reconnect=Reconnect
-message.telegram.connectInstr=To subscribe to alerts via Telegram, send the code below to the bot 'exrates_me_bot' \
-  https://t.me/exrates_me_bot. \
-Subscription fee, the cost is indicated above
+message.telegram.connectInstr=To subscribe to alerts via Telegram, send the code below to the bot {0} {1}. \
+Subscription fee shown below
 message.telegram.subscriptionPrice=Suscription price
 message.telegram.messagePrice=Message price
 telegram.payAndGetTheSubscriptionCode=Pay and get code
@@ -1245,8 +1244,8 @@ response.withdraw.pin.telegram=Pin code for withdraw has been sent to your Teleg
 response.transfer.pin.telegram=Pin code for transfer has been sent to your Telegram
 response.login.pin.sms=Pin code for login has been sent to your phone{0}
 response.login.pin.telegram=Pin code for login has been sent to your Telegram
-message.telegram.reconnectInstr=To connect another account send code to the telegram bot 'exrates_me_bot' \
-  https://t.me/exrates_me_bot
+message.telegram.reconnectInstr=To connect another account send code to the telegram bot '{0}' \
+  {1}
 message.sms.forOneMessage=Price for one message
 message.sms.forOneNumberCheck=for one number check
 message.sms.connect=Pay and connect
