--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -1390,7 +1390,7 @@ response.withdraw.pin.telegram=Pin code for withdraw has been sent to your Teleg
 response.transfer.pin.telegram=Pin code for transfer has been sent to your Telegram
 response.login.pin.sms=Pin code for login has been sent to your phone{0}
 response.login.pin.telegram=Pin code for login has been sent to your Telegram
-message.telegram.reconnectInstr=To connect another account send code to the telegram bot '{0}' \
+message.telegram.reconnectInstr=To connect another account send code to the telegram bot {0} \
   {1}
 message.sms.forOneMessage=Price for one message
 message.sms.forOneNumberCheck=for one number check
@@ -1419,3 +1419,7 @@ admin.telegramAbout=In case of telegram user pays only for first subscribe, all 
 notificator.price.value=Price, USD
 admin.editPrice=Edit price
 admin.2falogin.allSite=Enable strict 2fa login for all users
+message.connectCode.wrong=Wrong code
+message.numberUnoperable=The number is unoperable
+message.service.unavialble=Service is unavilable now
+message.notEnoughtUsd=Not enought USD on your account
