--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -1331,3 +1331,4 @@ contacts.arm.title=Armenian office
 contacts.arm.phone=+1
 btcWallet.receive.title=Receive
 wallets.downloadUserIps=Download users summary
+message.create.refill.request=Create refill request(Crypto)
