--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -1292,3 +1292,4 @@ contacts.arm.title=Armenian office
 contacts.arm.phone=+37460465980
 btcWallet.receive.title=Receive
 wallets.downloadUserIps=Download users summary
+message.create.refill.request=Create refill request(Crypto)
