--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -1174,7 +1174,7 @@ btcWallet.txDetails=Transaction details
 btcWallet.noAddress=Address not found in the database
 merchants.refill.xlm=Payment Address: {0}   <br>\
  Payment MEMO-ID: {1}
-message.pincode.forlogin=Loggin attemp {0}, from ip {1}. Your pin-code for login to Exrates is {2}. If it was not you, ignore the message.
+message.pincode.forlogin=Exrates. Pin for login {0}. IP {1}
 transaction.hash=Hash
 merchants.withdraw.WAITING_REVIEWING=Waiting reviewing
 Payment=Destination TAG: {1}
@@ -1298,13 +1298,14 @@ response.transfer.pin.email=Pin code for transfer has been sent to your email ad
 response.login.pin.email=Pin code for login has been sent to your email address {0}
 message.subj.withdraw.pin=Pin code for withdraw funds, Exrates
 message.subj.transfer.pin=Pin code for transfer funds, Exrates
-message.pincode.forWithdraw=Withdraw attemp at {0}, from ip {1}. Your pin-code for withdraw on Exrates is {2}. Amount is {3}. If it was not you, ignore the message.
-message.pincode.forTransfer=Transfer attemp at {0}, from ip {1}. Your pin-code for transfer on Exrates is {2}.  Amount is {3}. If it was not you, ignore the message.
+message.pincode.forWithdraw=Exrates. Pin for withdraw {0}. Amount {1}
+message.pincode.forTransfer=Exrates. Pin for transfer {0}. Amount {1}
 notificator.conect=Connect
 notificator.reconnect=Reconnect
-message.telegram.connectInstr=To subscribe to alerts via Telegram, send the code below to the bot {0} {1}. \
-Subscription fee shown below
-message.telegram.subscriptionPrice=Suscription price
+message.telegram.connectInstr=To subscribe to alerts via Telegrams, click the 'Pay and get Code' button,\
+and send the code to the bot {0} {1}.\
+The amount shown below will be withdrawn once from your USD account.
+message.telegram.subscriptionPrice=Subscription price
 message.telegram.messagePrice=Message price
 telegram.payAndGetTheSubscriptionCode=Pay and get code
 message.info=Info
