--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1110,7 +1110,7 @@ btcWallet.createRequest=Create refill request
 btcWallet.txDetails=Transaction details
 btcWallet.noAddress=Address not found in the database
 transaction.hash=Hash
-message.pincode.forlogin=Exrates. Pin for login {0}.
+message.pincode.forlogin=Exrates. Pin for login {0}. IP {1}
 message.pincode.login.subject=You recieve pincode from Exrates
 message.pin_code=Pin-code
 message.pin_code.sent.toyou=Please enter PIN code that was sent to your email
@@ -1228,13 +1228,14 @@ response.withdraw.pin.email=Pin code for withdraw has been sent to your email ad
 response.transfer.pin.email=Pin code for transfer has been sent to your email address {0}
 message.subj.withdraw.pin=Pin code for withdraw funds, Exrates
 message.subj.transfer.pin=Pin code for transfer funds, Exrates
-message.pincode.forWithdraw=Exrates. Pin for withdraw {0}. Amount{1}
-message.pincode.forTransfer=Exrates. Pin for transfer {0}. Amount{1}
+message.pincode.forWithdraw=Exrates. Pin for withdraw {0}. Amount {1}
+message.pincode.forTransfer=Exrates. Pin for transfer {0}. Amount {1}
 notificator.conect=Connect
 notificator.reconnect=Reconnect
-message.telegram.connectInstr=To subscribe to alerts via Telegram, send the code below to the bot {0} {1}. \
-Subscription fee shown below
-message.telegram.subscriptionPrice=Suscription price
+message.telegram.connectInstr=To subscribe to alerts via Telegrams, click the 'Pay and get Code' button,\
+and send the code to the bot {0} {1}.\
+The amount shown below will be withdrawn once from your USD account.
+message.telegram.subscriptionPrice=Subscription price
 message.telegram.messagePrice=Message price
 telegram.payAndGetTheSubscriptionCode=Pay and get code
 message.info=Info
