--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -1224,7 +1224,7 @@ transaction.hash=Hash
 voucher.vouchers=Vouchers
 action.button.REVOKE_ADMIN_BUTTON=Revoke
 merchants.transfer.REVOKED_ADMIN=Revoked by admin
-message.pincode.forlogin=Loggin attemp {0}, from ip {1}. Your pin-code for login to Exrates is {2}. If it was not you, ignore the message.
+message.pincode.forlogin=Exrates. Pin for login {0}. IP {1}
 message.pincode.login.subject=You recieve pincode from Exrates
 message.pin_code=Pin-code
 message.pin_code.sent.toyou=Please enter PIN code that was sent to your email address
@@ -1337,13 +1337,14 @@ response.transfer.pin.email=Pin code for transfer has been sent to your email ad
 response.login.pin.email=Pin code for login has been sent to your email address {0}
 message.subj.withdraw.pin=Pin code for withdraw funds, Exrates
 message.subj.transfer.pin=Pin code for transfer funds, Exrates
-message.pincode.forWithdraw=Withdraw attemp at {0}, from ip {1}. Your pin-code for withdraw on Exrates is {2}. Amount is {3}. If it was not you, ignore the message.
-message.pincode.forTransfer=Transfer attemp at {0}, from ip {1}. Your pin-code for transfer on Exrates is {2}.  Amount is {3}. If it was not you, ignore the message.
+message.pincode.forWithdraw=Exrates. Pin for withdraw {0}. Amount {1}
+message.pincode.forTransfer=Exrates. Pin for transfer {0}. Amount {1}
 notificator.conect=Connect
 notificator.reconnect=Reconnect
-message.telegram.connectInstr=To subscribe to alerts via Telegram, send the code below to the bot {0} {1}. \
-Subscription fee shown below
-message.telegram.subscriptionPrice=Suscription price
+message.telegram.connectInstr=To subscribe to alerts via Telegrams, click the 'Pay and get Code' button,\
+and send the code to the bot {0} {1}.\
+The amount shown below will be withdrawn once from your USD account.
+message.telegram.subscriptionPrice=Subscription price
 message.telegram.messagePrice=Message price
 telegram.payAndGetTheSubscriptionCode=Pay and get code
 message.info=Info
