--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -1424,3 +1424,4 @@ message.connectCode.wrong=Wrong code
 message.numberUnoperable=The number is unoperable
 message.service.unavialble=Service is unavilable now
 message.notEnoughtUsd=Not enought USD on your account
+transactionsourcetype.NOTIFICATIONS=Notifications
