--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1278,3 +1278,4 @@ message.connectCode.wrong=Wrong code
 message.numberUnoperable=The number is unoperable
 message.notEnoughtUsd=Not enought USD on your account
 message.service.unavialble=Service is unavilable now
+transactionsourcetype.NOTIFICATIONS=Notifications
