add warning text

--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -1294,3 +1294,6 @@ btcWallet.receive.title=Receive
 wallets.downloadUserIps=Download users summary
 message.create.refill.request=Create refill request(for crypto)
 message.refill.manual.created=Refill request in status ON_PENDING with ID {0} created
+message.create.refill.addressAttention=ATTENTION!!! For some currencies like ripple, stelar, NEM, which uses additional fields for transactions field \
+  address must be taken from this additional field. \
+  Example: Ripple - Destination tag, Stellar - MEMO.id or MEMO.text, NEM(XEM) - Message
