--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -1372,7 +1372,7 @@ message.sms.EnterCodeFromSms=Enter code from sms
 message.sms.code=Code
 message.sms.numberCheck=Check number
 message.sms.enterCode=Enter code
-message.sms.afterCheckInstruction=To attach this number, click the 'Connect' button, the sms with the registration code will be sent to you, each sms paid, the cost of one message for your phone number is indicated above.
+message.sms.afterCheckInstruction=To attach this number, click the 'Pay and connect' button, the sms with the registration code will be sent to you, each sms paid, the cost of one message for your phone number is indicated above.
 admin.notificatorsMessagesSettings=Notifications messages settings
 admin.enabled=Enabled
 admin.subscribePrice=Subscribe price
