--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1222,6 +1222,7 @@ contacts.arm.title=Armenian office
 contacts.arm.phone=+37460465980
 btcWallet.receive.title=Receive
 wallets.downloadUserIps=Download users summary
+btgWallet.title=Bitcoin Gold Wallet
 message.subj.login.pin=Pin code for login Exrates
 response.login.pin.email=Pin code for login has been sent to your email address {0}
 response.withdraw.pin.email=Pin code for withdraw has been sent to your email address {0}
