--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -1331,6 +1331,7 @@ contacts.arm.title=Armenian office
 contacts.arm.phone=+1
 btcWallet.receive.title=Receive
 wallets.downloadUserIps=Download users summary
+btgWallet.title=Bitcoin Gold Wallet
 message.subj.login.pin=Pin code for login Exrates
 response.withdraw.pin.email=Pin code for withdraw has been sent to your email address {0}
 response.transfer.pin.email=Pin code for transfer has been sent to your email address {0}
