--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -1368,6 +1368,7 @@ contacts.arm.title=Armenian office
 contacts.arm.phone=+37460465980
 btcWallet.receive.title=Receive
 wallets.downloadUserIps=Download users summary
+btgWallet.title=Bitcoin Gold Wallet
 message.subj.login.pin=Pin code for login Exrates
 response.withdraw.pin.email=Pin code for withdraw has been sent to your email address {0}
 response.transfer.pin.email=Pin code for transfer has been sent to your email address {0}
