--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1279,3 +1279,4 @@ message.numberUnoperable=The number is unoperable
 message.notEnoughtUsd=Not enought USD on your account
 message.service.unavialble=Service is unavilable now
 transactionsourcetype.NOTIFICATIONS=Notifications
+admin.messageFeePercents=SMS message Fee %
