--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -1349,3 +1349,4 @@ message.numberUnoperable=The number is unoperable
 message.service.unavialble=Service is unavilable now
 message.notEnoughtUsd=Not enought USD on your account
 transactionsourcetype.NOTIFICATIONS=Notifications
+admin.messageFeePercents=SMS message Fee %
