--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -1388,3 +1388,4 @@ message.numberUnoperable=The number is unoperable
 message.service.unavialble=Service is unavilable now
 message.notEnoughtUsd=Not enought USD on your account
 transactionsourcetype.NOTIFICATIONS=Notifications
+admin.messageFeePercents=SMS message Fee %
