--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -1389,3 +1389,6 @@ message.service.unavialble=Service is unavilable now
 message.notEnoughtUsd=Not enought USD on your account
 transactionsourcetype.NOTIFICATIONS=Notifications
 admin.messageFeePercents=SMS message Fee %
+settings.message.event.WITHDRAW=Withdraw
+settings.message.event.LOGIN=Login
+settings.message.event.TRANSFER=Transfer
