add localization etc.

--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1279,3 +1279,9 @@ message.numberUnoperable=The number is unoperable
 message.notEnoughtUsd=Not enought USD on your account
 message.service.unavialble=Service is unavilable now
 transactionsourcetype.NOTIFICATIONS=Notifications
+admin.orders.selectAllButton=Select all
+admin.orders.selectNoneButton=Select none
+admin.orders.acceptSelectedButton=Accept Selected
+admin.orders.deleteSelectedButton=Delete Selected
+admin.orders.promptAccept=Are you sure you want to ACCEPT the following orders:
+admin.orders.promptDelete=Are you sure you want to DELETE the following orders:
