--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1280,3 +1280,6 @@ message.numberUnoperable=The number is unoperable
 message.notEnoughtUsd=Not enought USD on your account
 message.service.unavialble=Service is unavilable now
 transactionsourcetype.NOTIFICATIONS=Notifications
+admin.autoTrading.settings.priceDeviation=Price deviation (% of price step)
+admin.autoTrading.settings.stepDeviation=Price step deviation (% of price step)
+admin.autoTrading.settings.randomStep=Randomized price step
