--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -1389,3 +1389,6 @@ message.numberUnoperable=The number is unoperable
 message.service.unavialble=Service is unavilable now
 message.notEnoughtUsd=Not enought USD on your account
 transactionsourcetype.NOTIFICATIONS=Notifications
+admin.autoTrading.settings.priceDeviation=Price deviation (% of price step)
+admin.autoTrading.settings.stepDeviation=Price step deviation (% of price step)
+admin.autoTrading.settings.randomStep=Randomized price step
