--- a/Controller/src/main/resources/ValidationMessages_in.properties
+++ b/Controller/src/main/resources/ValidationMessages_in.properties
@@ -8,3 +8,6 @@ bot.min.minPrice=Min price must be 0 or greater
 bot.min.maxPrice=Max price must be 0 or greater
 bot.min.priceStep=Price step must be 0 or greater
 bot.min.timeout.accept=Accept timeout value must be 0 or greater
+bot.deviation.minPrice=Min price deviation must be 0 to 100%
+bot.deviation.maxPrice=Max price deviation must be 0 to 100%
+bot.deviation.priceStep=Price step deviation must be 0 to 100%
