--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -1431,3 +1431,6 @@ message.numberUnoperable=\u041D\u043E\u043C\u0435\u0440 \u043D\u0435 \u043E\u043
 message.service.unavialble=\u0421\u0435\u0440\u0432\u0438\u0441 \u043D\u0435\u0434\u043E\u0441\u0442\u0443\u043F\u0435\u043D \u0432 \u0434\u0430\u043D\u043D\u044B\u0439 \u043C\u043E\u043C\u0435\u043D\u0442
 message.notEnoughtUsd=\u041D\u0435\u0434\u043E\u0441\u0442\u0430\u0442\u043E\u0447\u043D\u043E USD \u043D\u0430 \u0432\u0430\u0448\u0435\u043C \u0441\u0447\u0435\u0442\u0443
 transactionsourcetype.NOTIFICATIONS=\u041E\u043F\u043E\u0432\u0435\u0449\u0435\u043D\u0438\u044F
+admin.autoTrading.settings.priceDeviation=\u041E\u0442\u043A\u043B\u043E\u043D\u0435\u043D\u0438\u0435 \u0446\u0435\u043D\u044B (% \u0448\u0430\u0433\u0430 \u0446\u0435\u043D\u044B)
+admin.autoTrading.settings.stepDeviation=\u041E\u0442\u043A\u043B\u043E\u043D\u0435\u043D\u0438\u0435 \u0448\u0430\u0433\u0430 \u0446\u0435\u043D\u044B (% \u0448\u0430\u0433\u0430 \u0446\u0435\u043D\u044B)
+admin.autoTrading.settings.randomStep=\u0421\u043B\u0443\u0447\u0430\u0439\u043D\u044B\u0439 \u0448\u0430\u0433 \u0446\u0435\u043D\u044B
