--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -1445,3 +1445,4 @@ admin.orders.deleteSelectedButton=Delete Selected
 admin.orders.promptAccept=Are you sure you want to ACCEPT the following orders:
 admin.orders.promptDelete=Are you sure you want to DELETE the following orders:
 zecWallet.title=Zcash wallet
+input.warning.WAVES=WAVES default fee will be subtracted from your payment!
