--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1300,3 +1300,4 @@ admin.autoTrading.settings.priceDeviation=Price deviation (% of price step)
 admin.autoTrading.settings.stepDeviation=Price step deviation (% of price step)
 admin.autoTrading.settings.randomStep=Randomized price step
 zecWallet.title=Zcash wallet
+input.warning.WAVES=WAVES default fee will be subtracted from your payment!
