--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -1444,3 +1444,4 @@ admin.orders.acceptSelectedButton=Accept Selected
 admin.orders.deleteSelectedButton=Delete Selected
 admin.orders.promptAccept=Are you sure you want to ACCEPT the following orders:
 admin.orders.promptDelete=Are you sure you want to DELETE the following orders:
+zecWallet.title=Zcash wallet
