--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1299,3 +1299,4 @@ admin.orders.promptDelete=Are you sure you want to DELETE the following orders:
 admin.autoTrading.settings.priceDeviation=Price deviation (% of price step)
 admin.autoTrading.settings.stepDeviation=Price step deviation (% of price step)
 admin.autoTrading.settings.randomStep=Randomized price step
+zecWallet.title=Zcash wallet
