--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -1409,3 +1409,8 @@ admin.orders.promptAccept=Are you sure you want to ACCEPT the following orders:
 admin.orders.promptDelete=Are you sure you want to DELETE the following orders:
 zecWallet.title=Zcash wallet
 input.warning.WAVES=WAVES default fee will be subtracted from your payment!
+admin.generalStats.title=General Statistics
+admin.generalStats.button.currencies=Currency turnover statistics
+admin.generalStats.button.currencyPairs=Currency pairs turnover statistics
+admin.stats.download=Download
+admin.users.new=New users registered
