add report mailing - 1

--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -1451,3 +1451,8 @@ admin.generalStats.button.currencies=Currency turnover statistics
 admin.generalStats.button.currencyPairs=Currency pairs turnover statistics
 admin.stats.download=Download
 admin.users.new=New users registered
+admin.generalStats.menu.stats=Statistics
+admin.generalStats.menu.mailing=Mailing settings
+admin.generalStats.mailing.status=Enable mailing
+admin.generalStats.mailing.time=Mailing time
+admin.generalStats.mailing.email=Email
