--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -1452,3 +1452,6 @@ admin.generalStats.button.currencies=Currency turnover statistics
 admin.generalStats.button.currencyPairs=Currency pairs turnover statistics
 admin.stats.download=Download
 admin.users.new=New users registered
+ip.ban.message=Your IP address is banned for {0}. Please try to login again later
+ip.ban.time.minutes = {0} minutes
+ip.ban.time.hours = {0} hours
