--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -1376,3 +1376,4 @@ admin.generalStats.button.currencies=Currency turnover statistics
 admin.generalStats.button.currencyPairs=Currency pairs turnover statistics
 admin.stats.download=Download
 admin.users.new=New users registered
+btcWallet.subtractFeeFromAmount=Subtract fee from amount
