--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -1415,3 +1415,4 @@ admin.generalStats.button.currencies=Currency turnover statistics
 admin.generalStats.button.currencyPairs=Currency pairs turnover statistics
 admin.stats.download=Download
 admin.users.new=New users registered
+btcWallet.subtractFeeFromAmount=Subtract fee from amount
