fix merchant commission

--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -1379,3 +1379,6 @@ admin.users.new=New users registered
 ip.ban.message=Your IP address is banned for {0}. Please try to login again later
 ip.ban.time.minutes = {0} minutes
 ip.ban.time.hours = {0} hours
+merchants.modalOutputSumCommission=Total Fee : __amount __currency
+merchants.withdrawDetails.outputSumCommission=Total Fee
+merchant.commission.rateWithLimit={0}, but not less than {1}
