--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -1418,3 +1418,4 @@ admin.users.new=New users registered
 ip.ban.message=Your IP address is banned for {0}. Please try to login again later
 ip.ban.time.minutes = {0} minutes
 ip.ban.time.hours = {0} hours
+message.alertUpdate=Update of exchange will performed in __time . Exchange will unavailable for {} minutes
