--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1310,3 +1310,5 @@ admin.users.new=New users registered
 ip.ban.message=Your IP address is banned for {0}. Please try to login again later
 ip.ban.time.minutes = {0} minutes
 ip.ban.time.hours = {0} hours
+message.alertUpdate=Update of exchange will performed in __time . Exchange will unavailable for {} minutes
+message.alertTechWorks=Technical works performing now. Exchange may works unstable
