--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -1460,3 +1460,4 @@ admin.users.new=\u041D\u043E\u0432\u044B\u0435 \u0437\u0430\u0440\u0435\u0433\u0
 ip.ban.message=\u0412\u0430\u0448 IP \u0430\u0434\u0440\u0435\u0441 \u0437\u0430\u0431\u043B\u043E\u043A\u0438\u0440\u043E\u0432\u0430\u043D \u043D\u0430 {0}. \u041F\u043E\u0436\u0430\u043B\u0443\u0439\u0441\u0442\u0430, \u043F\u043E\u043F\u0440\u043E\u0431\u0443\u0439\u0442\u0435 \u0432\u043E\u0439\u0442\u0438 \u043F\u043E\u0437\u0436\u0435
 ip.ban.time.minutes = {0} \u043C\u0438\u043D\u0443\u0442
 ip.ban.time.hours = {0} \u0447\u0430\u0441\u0430
+message.alertUpdate=Update of exchange will performed in __time . Exchange will unavailable for {} minutes
