--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -1464,3 +1464,5 @@ admin.generalStats.mailing.status=Enable mailing
 admin.generalStats.mailing.time=Mailing time
 admin.generalStats.mailing.email=Email
 btcWallet.subtractFeeFromAmount=Subtract fee from amount
+admin.generalStats.button.currencyPairsInOutComis=In Out By currencies
+admin.generalStats.button.currencyPairsComissions=Currency pairs comisions
