--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -1388,3 +1388,5 @@ admin.generalStats.mailing.status=Enable mailing
 admin.generalStats.mailing.time=Mailing time
 admin.generalStats.mailing.email=Email
 btcWallet.subtractFeeFromAmount=Subtract fee from amount
+admin.generalStats.button.currencyPairsInOutComis=In Out By currencies
+admin.generalStats.button.currencyPairsComissions=Currency pairs comisions
