--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1319,5 +1319,5 @@ admin.generalStats.mailing.status=Enable mailing
 admin.generalStats.mailing.time=Mailing time
 admin.generalStats.mailing.email=Email
 btcWallet.subtractFeeFromAmount=Subtract fee from amount
-admin.generalStats.button.currencyPairsInOutComis=In Out By currencies
-admin.generalStats.button.currencyPairsComissions=Currency pairs comisions
+admin.generalStats.button.currencyPairsInOutComis=Statistics by in/out by currencies
+admin.generalStats.button.currencyPairsComissions=Statistics by orders comissions and pairs
