separate transfer comissions from others

--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1312,3 +1312,8 @@ ip.ban.time.minutes = {0} minutes
 ip.ban.time.hours = {0} hours
 message.alertUpdate=Update of exchange will performed in __time . Exchange will unavailable for {} minutes
 message.alertTechWorks=Technical works performing now. Exchange may works unstable
+admin.transferCommissions=Transfer comissions
+admin.merchantsCommissions.transfer=Comission for transfer
+admin.merchantsCommissions.minSum=Min transfer sum
+admin.merchantsCommissions.minFixedForTransfer=Min comission for transfer
+admin.editTransferCommission=Transfer Commissions
