--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -1380,3 +1380,8 @@ ip.ban.message=Your IP address is banned for {0}. Please try to login again late
 ip.ban.time.minutes = {0} minutes
 ip.ban.time.hours = {0} hours
 message.alertUpdate=Update of exchange will performed in __time . Exchange will unavailable for {} minutes
+admin.transferCommissions=Transfer comissions
+admin.merchantsCommissions.transfer=Comission for transfer
+admin.merchantsCommissions.minSum=Min transfer sum
+admin.merchantsCommissions.minFixedForTransfer=Min comission for transfer
+admin.editTransferCommission=Transfer Commissions
