--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -1461,3 +1461,6 @@ ip.ban.message=\u0412\u0430\u0448 IP \u0430\u0434\u0440\u0435\u0441 \u0437\u0430
 ip.ban.time.minutes = {0} \u043C\u0438\u043D\u0443\u0442
 ip.ban.time.hours = {0} \u0447\u0430\u0441\u0430
 message.alertUpdate=Update of exchange will performed in __time . Exchange will unavailable for {} minutes
+admin.merchantsCommissions.transfer=\u041A\u043E\u043C\u0438\u0441\u0441\u0438\u044F \u0437\u0430 \u043F\u0435\u0440\u0435\u0432\u043E\u0434
+admin.merchantsCommissions.minFixedForTransfer=\u041C\u0438\u043D\u0438\u043C\u0430\u043B\u044C\u043D\u0430\u044F \u043A\u043E\u043C\u0438\u0441\u0441\u0438\u044F \u0437\u0430 \u043F\u0435\u0440\u0435\u0432\u043E\u0434
+admin.editTransferCommission=\u041A\u043E\u043C\u0438\u0441\u0441\u0438\u0438 \u0437\u0430 \u043F\u0435\u0440\u0435\u0432\u043E\u0434
